--- a/index.html
+++ b/index.html
@@ -393,11 +393,11 @@
 
     </section>
     <!---------------------------------------- second-page-start ---------------------------------------->
-    <div onclick="showElementById()" id="success-page" class="bg-slate-300 py-28 px-60 justify-center items-center hidden">
-      <div class="bg-white justify-center items-center text-center p-20 space-y-5 rounded-2xl">
+    <div onclick="showElementById()" id="success-page" class="bg-slate-300 p-10  justify-center items-center hidden">
+      <div class="bg-white justify-center items-center text-center  space-y-5 rounded-2xl p-8">
         <img class="mx-auto" src="images/success.png" alt="">
-        <h1 class="text-3xl font-bold text-green-500">SUCCESS</h1>
-        <h2 class="text-2xl font-semibold">Thank you for Booking Our  Bus Seats. <br>We are working hard to find the best service and deals for you</h2>
+        <h1 class="text-xl font-bold text-green-500">SUCCESS</h1>
+        <h2 class="text-xl font-semibold">Thank you for Booking Our  Bus Seats. <br>We are working hard to find the best service and deals for you</h2>
         <p>Shortly you will find a confimation in your email</p>
         <button onclick="Continue()" class="btn bg-[#27ae60] px-8 ">Continue</button>
       </div>
